--- a/src/App.less
+++ b/src/App.less
@@ -41,3 +41,21 @@
 //     transform: rotate(360deg);
 //   }
 // }
+.login-form {
+  padding: 32px;
+  width: 360px;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  box-shadow: 0 0 100px rgba(0, 0, 0, 0.08);
+  margin: -160px 0 0 -160px;
+}
+.login-form-forgot {
+  float: right;
+}
+.ant-col-rtl .login-form-forgot {
+  float: left;
+}
+.login-form-button {
+  width: 100%;
+}
