--- a/src/App.less
+++ b/src/App.less
@@ -59,3 +59,12 @@
 .login-form-button {
   width: 100%;
 }
+.site-page-header {
+  background: #fff;
+  border: 1px solid rgb(235, 237, 240);
+}
+.site-page-content {
+  padding: 24px;
+  background: #fff;
+  border: 1px solid rgb(235, 237, 240);
+}
